# rtd0112

./: CLEANUP_SUMMARY.md  CMakeLists.txt  CMakeLists_new.txt  DEBUG_CONFIG.md  DEBUG_GUIDE.md  DOSE_ANALYSIS_README.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  MODIFICATION_LOG.txt  Makefile  README.md  REORGANIZATION_SUMMARY.md  analyze_dose_from_bin.py  beam_spots_analysis.csv  compile_all.bat  debug.bat  debug.sh  debug_subspot  dose_analysis.py  dose_analysis_results.csv  dose_distribution_data.csv  dose_distribution_sample.csv  dose_distribution_summary.csv  dose_output.txt  quick_test.bat  quick_test.sh  run_debug.sh  simple_dose_analysis.py  test.sh  test_compile.sh  test_energy_comparison.sh  test_energy_dependence.sh  test_library_new  z_coordinate_analysis.py
.ipynb_checkpoints/: visualize_dose-checkpoint.py
RTD2/: BUILD_INSTRUCTIONS.md  CMakeLists.txt  DEPLOYMENT_GUIDE.md  Makefile  RAYTRACEDICOM_COMPLETE_INTEGRATION_SUMMARY.md  RAYTRACEDICOM_INTEGRATION_GUIDE.md  README_BEV_integration.md  README_RayTraceDicom_Integration.md  README_simplified_wrapper.md  WINDOWS_COMPILATION_GUIDE.md  bev_kernel_wrapper_test.cu  bev_kernel_wrapper_test.cuh  bev_transforms_test.cuh  calDose_kernelwrapper.cu  common.cuh  compile_test.cpp  compile_windows.bat  configure.sh  cudaCalDose.cpp  deviceCalDose.cu  quick_recompile.bat  quick_recompile.sh  simplified_protons_wrapper.cu  simplified_protons_wrapper.cuh  test_compilation.sh  test_environment.sh  test_simplified_wrapper.cpp  test_simplified_wrapper_basic.cpp  test_simplified_wrapper_optimizesuperposition.cpp
RTD2/raytracedicom_integration/: CMakeLists.txt  COMPILATION_FIXES_SUMMARY.md  Dockerfile  Makefile  README.md  compile_all.bat  compile_all.sh  quick_test.bat  quick_test.sh
RTD2/raytracedicom_integration/include/: idd_sigma_calculation.h  ray_tracing.h  raytracedicom_integration.h  superposition_kernels.h  utils.h
RTD2/raytracedicom_integration/src/: idd_sigma_calculation.cu  ray_tracing.cu  raytracedicom_wrapper.cu  superposition_kernels.cu  test_raytracedicom.cpp  utils.cu
RayTraceDicom-main (1)/: myKernel.cpp
carbonPBS/: CMakeLists.txt  cudaCalDose.cpp  deviceCalDose.cu
cuda_samples/: helper_cuda.h  helper_math.h
include/algorithms/: convolution.h  cpu_subspot_convolution.h  cuda_final_dose.h  fill_idd_and_sigma_params.cuh  float3_from_fan_transform.h  float3_to_fan_transform.h  idd_sigma.h  prim_transf_kernel.h  ray_weight_initialization.h  ray_weight_initialization_cpu.h  roi_range_calculation.h  subspot_cpu_convolution.h  superposition.h  transfer_param_helper.h  transfer_param_struct_div3.cuh
include/core/: Macro.cuh  bev_ray_tracing.h  common.cuh  forward_declarations.h  ray_tracing.h  raytracedicom_integration.h
include/utils/: advanced_memory_texture.h  backward_compatibility.h  debug_tools.h  energy_reader.h  energy_struct.h  texture_ultra_optimized.h  utils.h
input/CT/: CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002556.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002557.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002558.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002559.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002560.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002561.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002562.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002563.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002564.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002565.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002566.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002567.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002568.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002569.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002570.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002571.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002572.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002573.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002574.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002575.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002576.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002577.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002578.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002579.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002580.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002581.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002582.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002583.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002584.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002585.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002586.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002587.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002588.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002589.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002590.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002591.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002592.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002593.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002594.dcm  CT.1.3.12.2.1107.5.1.4.95787.30000021032401352288100002595.dcm  (+63 more)
input/RTplan/: RP1.2.826.0.1.3680043.10.1049.202308230930505332401.dcm
kernels/: CMakeLists(total).txt
owl/: CMakeLists.txt
owl/owl/: CMakeLists.txt  Texture.cpp
src/: debug_subspot.cpp  test_library.cpp  test_simple.cpp
src/algorithms/: complete_superposition.cu  convolution.cu  cuda_final_dose.cu  idd_sigma.cu  prim_transf_kernel.cu  superposition.cu  transfer_param_helper.cu  transfer_param_struct_div3_impl.cu
src/core/: bev_ray_tracing.cu  ray_tracing.cu  raytracedicom_wrapper.cu
src/tests/: complete_dose_debug.cu  cpb_convolution_debug.cu  cpb_ray_tracing_integration.cu  (+7 more)
(+12 files in other folders)
